opposite scrolling enabled.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   </head>
   <body>
-    <div class="carousel a">
-      <div class="group">
+    <div class="carousel">
+      <div class="group a">
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
@@ -29,7 +29,7 @@
         <div class="card"><div class="word-card"></div></div>
       </div>
       <!-- Add `aria-hidden` to hide the duplicated cards from screen readers. -->
-      <div aria-hidden class="group">
+      <div aria-hidden class="group a">
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
@@ -87,8 +87,8 @@
       </ul>
     </div>
 
-    <div class="carousel b">
-      <div class="group">
+    <div class="carousel">
+      <div class="group b">
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
@@ -106,7 +106,7 @@
         <div class="card"><div class="word-card"></div></div>
       </div>
       <!-- Add `aria-hidden` to hide the duplicated cards from screen readers. -->
-      <div aria-hidden class="group">
+      <div aria-hidden class="group b">
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
         <div class="card"><div class="word-card"></div></div>
